Fixed Index Background
background image wasn't covering bottom of the page on larger screens. Fixed that with some different CSS stuff

--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,8 @@
-.HelloWorld{
-
-}
-
 #Body{
   background-image: url(https://cdn.wallpapersafari.com/6/10/zGM5b2.gif);
-  background-position: center;
+  /*background-position: center;*/
   background-repeat: no-repeat;
+  background-attachment: fixed;
   background-size: cover;
 }
 
